# GrokSearch

./: .gitignore  AUTHORS.md  LICENSE  README.md  pyproject.toml
benchmarks/: web_fetch_fallback_urls.txt  web_fetch_real_urls.txt
docs/: README_EN.md  improvement-workflow.md  release-note-2026-04-15-citation-fix.md
scripts/: benchmark_web_fetch.py  compare_versions.py
src/grok_search/: config.py  fetch_processing.py  logger.py  planning.py  server.py  sources.py  utils.py
src/grok_search/providers/: __init__.py  base.py  grok.py
tests/: test_benchmark_web_fetch.py  test_compare_versions.py  test_regressions.py
